# agent-foundry

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  URGENT-LSP-analysis.md  agent_foundry.config  bootstrap.sh  dockerfile-design-session-assessment.md  input.yaml  jig.config.md  pyproject.toml  work-status.md
.claude/: settings.json
.claude/hooks/: concise-response.sh  lsp-reminder.sh  session-start.sh
.githooks/: pre-commit
.github/workflows/: ci.yml
capabilities/: architecture_generate_feature_arch.yaml  dev_implement_feature_tdd.yaml  human_approval_gate.yaml  rag_retriever.yaml  schema_validator.yaml  spec_generate_feature_spec.yaml  strategy_generate_product_brief.yaml  structured_output_pydantic.yaml  tool_calling.yaml
docker/: CLAUDE.md  Dockerfile  bash-that-volume.sh  build-arch-cc-worker.sh  entrypoint.sh  product-init.sh  settings.json
docs/: README.md  agent-foundry-claude-dockerfile.md  agent-foundry-separation-spec.md  agent-foundry-vision.md  agentic_systems_platform_build_instructions.md  agentic_systems_platform_build_instructions.orig.md  architecture.md  claude-dockerfile-notes.md  guidelines_for_autonomous_engineering-DRAFT-1.md  guidelines_for_autonomous_engineering-DRAFT-2-BETTER-DIAGNOSIS.md  guidelines_for_autonomous_engineering-DRAFT-2.md  lessons-learned.md  repo_agent_task_classes.md  unit-test-improvements-summary.md  using-agent-foundry-draft.md  vision.md
docs-staging/: archipelago-instruction-stack.md
docs-staging/agents-guide/: agent-containers-guide.md
docs-staging/users-guide/: agent-containers.md  agent-foundry-users-guide.md
docs-temp/agents-guide/: agent-containers-guide.md
docs-temp/users-guide/: agent-containers.md
docs/archipelago/: adapter_protocol_spec.md  archipelago_workflow_orchestrator_mvp_analysis.md  docker-testing-log.md  docker-worker-requirements.md
docs/architecture/: adr_agent_roles_for_test_source_development_loop.md  adr_markdown_template_model_shape.md  adr_typed_state_and_node_contracts.md  agent-foundry-architecture.md  agent-foundry-ontology.md  agent-foundry-open-decisions.md  agent-foundry-separation-spec.md  framework-layers-and-boundaries.md  motivation-and-principles.md  platform-evolution-and-research.md  research-agent-memory-landscape.md  value-lever-exploration.md
docs/business/: agent-foundry-advantages.md  agent-foundry-open-and-proprietary.md  product-dev-strategy-to-execution.md
docs/demo-archipelago/: adapter_protocol_spec.md  archipelago_workflow_orchestrator_feature_spec.md  archipelago_workflow_orchestrator_mvp_analysis.md  claude_code_docker_worker_feature_spec.md  work-status.md
docs/design/: 2026-05-01-per-agent-gid-filesystem-permissions.md  2026-05-16-container-failure-postmortem.md  ai-call-resilience.md  checkpoint-resume-contract.md  codex-agent.md  eval-harness.md  exec-failure-via-responder.md  mlflow-tracing-integration-design.md  observability-adapter-design.md  per-agent-gid-filesystem-permissions.md  system-resilience-and-resume.md
docs/future-systems/: engineering-doc-management.md
docs/guides/: agent-containers.md  extending.md  getting-started.md  releasing.md
docs/implemented/: agent_foundry_initial_build_instructions.md
docs/internal/: README.md
docs/plans/: 2026-04-27-mlflow-tracing-integration-plan.md  2026-05-08-agent-action-model-field.md  2026-06-01-centralize-child-specs.md  2026-06-01-resolver-abort-clean-termination.md  dspy-evaluation.md  evaluate-rna-for-agent-containers.md  retry-resolver-seat.md  strict-typing-and-agent-decoupling.md
docs/reference/: agent-containers.md  ai-call-resilience.md  claude-code-cli-reference.md  claude-md-layering.md  evals.md  public-api.md  runtime.md
docs/research/: mlfow-in-agent-foundry.md  open-source-markdown-package.md  rna-research.md
docs/strategy/: framework-positioning.md
docs/users-guide/: agent-foundry-users-guide.md
examples/: getting_started.py
examples/mlflow_demo/: README.md  docker-compose.yaml  main.py
lab/: adapter.py  headless_adapter.py  list_models.py  protocol_test_server.py  run-workspace.sh  test_adapter.py  test_socket_adapter.py  test_ws_adapter.py
lab/ai_call_tests/: run.sh  test_design_review.py
lab/ai_request_tests/: test_design_review.py
lab/dev_test_input/: cognitive-reasoning-evals.yaml  crodino-eval.yaml  crodino-test1.yaml  crodino-web-app.yaml  dev-test-input.yaml  scratch-test.yaml
lab/eval_tests/: design_review.py  design_review_suite.py  italian_word_suite.py  run_design_review_eval.sh  run_italian_eval.sh
lab/mcp_tool_tests/: run.sh  test_echo_mcp.py  test_echo_mcp_http.py
scripts/: build_version.py  check-markdown-links.py
scripts/api-fault-inject/: commands  docker-compose.mitm.yml  mitm-inject-5xx.py  mitmproxy-ca.crt  readme.md
src/agent_foundry/: __init__.py
src/archetype/: README.md  __init__.py
src/archipelago/: __main__.py  archipelago_system.json  cli.py  handlers.py  pipeline_plan.json  prompts.py  runner.py
tests/: conftest.py  test_capability_execution.py  test_capability_spec.py  test_capability_spec_errors.py  test_compiler_advanced.py  test_compiler_basic.py  test_decision_support_demo.py  test_gate_enforcement.py  test_minimum_capabilities.py  test_observability.py  test_plan_integrity.py  test_plan_tools_breakpoints_versions.py  test_planner_eval_gates.py  test_planner_minimal.py  test_planner_retrieval_tools.py  test_registry_benchmark.py  test_retriever_api.py  test_retriever_benchmark.py  test_retriever_determinism.py  test_retriever_failures.py  test_retriever_index.py  test_retriever_no_hits.py  test_retriever_snippets.py
tests/agent_foundry/: conftest.py  stub_handler.py  test_capability_execution.py  test_capability_imports.py  test_capability_registry.py  test_capability_spec.py  test_capability_spec_errors.py  test_compile_time_validation.py  test_compiler_advanced.py  test_compiler_basic.py  test_compiler_config_injection.py  test_compiler_dynamic_resolution.py  test_compiler_resolve_handler.py  (+36 more)
(+485 files in other folders)
