[project]
name = "agent-foundry"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "mark norman", email = "mark@marknorman.com"},
]
dependencies = [
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.1",
    "langchain-anthropic>=1.3.4",
    "jsonschema>=4.26.0",
    "langchain-community>=0.4.1",
    "faiss-cpu>=1.13.2",
    "langchain-huggingface>=1.2.0",
    "langgraph>=1.0.9",
    "docker>=7.1.0",
    "pexpect>=4.9.0",
    "websockets>=16.0",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-m 'not benchmark'"
markers = [
    "benchmark: performance benchmark tests (excluded from normal runs)",
    "integration: integration tests (require Docker, external services)",
]



[tool.pdm]
distribution = false

[tool.pdm.build]
includes = ["src/agent_foundry/capabilities/*.yaml"]

[tool.pdm.scripts]
demo.cmd = "python -m agent_foundry.demo.cli"
demo.env = {PYTHONPATH = "src"}
archipelago.cmd = "python -m archipelago.cli"
archipelago.env = {PYTHONPATH = "src"}
docker-base.cmd = "docker build -t acp-cc-worker:latest -f src/agent_foundry/acp/docker/Dockerfile.base ."
docker-archipelago.cmd = "docker build -t archipelago-cc-worker:latest -f src/archipelago/docker/Dockerfile ."
test-unit.cmd = "pytest tests/ -m 'not integration and not benchmark'"
test-unit.env = {PYTHONPATH = "src"}
test-integration.cmd = "pytest tests/ -m 'integration'"
test-integration.env = {PYTHONPATH = "src"}
lint-imports.cmd = "lint-imports"
lint-imports.env = {PYTHONPATH = "src"}
lint.cmd = "ruff check src/ tests/"
lint.env = {PYTHONPATH = "src"}
format.cmd = "ruff format src/ tests/"
format.env = {PYTHONPATH = "src"}
typecheck.cmd = "pyright"
typecheck.env = {PYTHONPATH = "src"}

[dependency-groups]
dev = [
    "import-linter>=2.10",
    "ruff>=0.15.4",
    "pyright>=1.1.408",
    "pre-commit>=4.5.1",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.13"
pythonPlatform = "Linux"
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
include = ["src"]
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = false
ignore = ["src/archipelago/handlers.py"]

[tool.importlinter]
root_packages = ["agent_foundry", "archipelago"]
include_external_packages = false

[[tool.importlinter.contracts]]
name = "Agent Foundry must not import from Archipelago"
type = "forbidden"
source_modules = ["agent_foundry"]
forbidden_modules = ["archipelago"]
