[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "agent-foundry"
version = "0.8.8"
description = "Default template for PDM package"
authors = [
    {name = "Mark Norman", email = "mark@marknorman.com"},
]
dependencies = [
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.1",
    "jsonschema>=4.26.0",
    "docker>=7.1.0",
    "pexpect>=4.9.0",
    "langgraph>=1.1.2",
    "markdown-it-py>=4.0.0",
    "jinja2>=3.1.0",
    "opentelemetry-api>=1.41.1",
    "opentelemetry-sdk>=1.41.1",
    "opentelemetry-exporter-otlp-proto-http>=1.41.1",
    "anthropic>=0.100.0",
    "pydantic-evals>=1.96.1",
]
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
mlflow = ["mlflow>=3.6.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-m 'not benchmark' -n 16"
asyncio_mode = "strict"
markers = [
    "benchmark: performance benchmark tests (excluded from normal runs)",
    "integration: integration tests (require Docker, external services)",
]





[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"

[tool.pdm.scripts]
post_install.cmd = "pre-commit install --hook-type pre-commit --hook-type pre-push"
demo.cmd = "python -m agent_foundry.demo.cli"
demo.env = {PYTHONPATH = "src"}
docker-base.cmd = "docker build -t agent-worker:latest -f src/agent_foundry/agents/docker/Dockerfile.base ."
docker-foundry-dev.cmd = "docker build -t agent-worker-foundry-dev:latest -f src/agent_foundry/agents/docker/Dockerfile.foundry-dev ."
test-unit.cmd = "pytest {args:tests/} -m 'not integration and not benchmark'"
test-unit.env = {PYTHONPATH = "src"}
test-integration.cmd = "pytest {args:tests/} -m 'integration'"
test-integration.env = {PYTHONPATH = "src"}
test-all.cmd = "pytest tests/ -m 'not benchmark'"
test-all.env = {PYTHONPATH = "src"}
lint-imports.cmd = "lint-imports"
lint-imports.env = {PYTHONPATH = "src"}
lint.cmd = "ruff check --fix src/ tests/"
lint.env = {PYTHONPATH = "src"}
format.cmd = "ruff format src/ tests/"
format.env = {PYTHONPATH = "src"}
typecheck.cmd = "pyright"
typecheck.env = {PYTHONPATH = "src"}

[dependency-groups]
dev = [
    "import-linter>=2.10",
    "ruff==0.14.14",
    "pyright>=1.1.408",
    "pre-commit>=4.5.1",
    "pytest-xdist>=3.8.0",
    "pytest-asyncio>=1.3.0",
]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.14"
pythonPlatform = "Linux"
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
include = ["src"]
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = false
ignore = []
