[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "agent-foundry"
dynamic = ["version"]
description = "Typed framework for declaring and running agentic systems"
authors = [
    {name = "Mark Norman", email = "mark@marknorman.com"},
]
dependencies = [
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "jsonschema>=4.26.0",
    "docker>=7.1.0",
    "pexpect>=4.9.0",
    "langgraph>=1.1.2",
    "opentelemetry-api>=1.41.1",
    "opentelemetry-sdk>=1.41.1",
    "opentelemetry-exporter-otlp-proto-http>=1.41.1",
    "anthropic>=0.100.0",
    "pydantic-evals>=1.96.1",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.47.0",
    "archetype-md>=0.2.0",
    "openai>=2.43.0",
]
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "Apache-2.0"}
keywords = [
    "agents",
    "agentic",
    "ai",
    "framework",
    "llm",
    "orchestration",
    "pydantic",
    "typed",
    "workflow",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/monkeynaut-ai/agent-foundry"
Source = "https://github.com/monkeynaut-ai/agent-foundry"
"Bug Tracker" = "https://github.com/monkeynaut-ai/agent-foundry/issues"
Documentation = "https://github.com/monkeynaut-ai/agent-foundry/tree/main/docs"

[project.optional-dependencies]
mlflow = ["mlflow>=3.6.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-m 'not benchmark' -n 16"
asyncio_mode = "strict"
tmp_path_retention_policy = "failed"
tmp_path_retention_count = 3
markers = [
    "benchmark: performance benchmark tests (excluded from normal runs)",
    "integration: integration tests (require Docker, external services)",
]

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"
tag_filter = "v*"
fallback_version = "0.0.0"

[tool.pdm.build]
package-dir = "src"

[tool.pdm.scripts]
post_install.cmd = "pre-commit install --hook-type pre-commit --hook-type pre-push"
demo.cmd = "python -m agent_foundry.demo.cli"
demo.env = {PYTHONPATH = "src"}
eval-api.cmd = "python -m agent_foundry.evals.api"
docker-base.cmd = "docker build -t agent-worker:latest -f src/agent_foundry/agents/docker/Dockerfile.base ."
docker-foundry-dev.cmd = "docker build -t agent-worker-foundry-dev:latest -f src/agent_foundry/agents/docker/Dockerfile.foundry-dev ."
docker-rebuild.shell = "docker build --no-cache -t agent-worker:latest -f src/agent_foundry/agents/docker/Dockerfile.base . && docker build --no-cache -t agent-worker-foundry-dev:latest -f src/agent_foundry/agents/docker/Dockerfile.foundry-dev ."
test-unit.cmd = "pytest {args:tests/} -m 'not integration and not benchmark'"
test-unit.env = {PYTHONPATH = "src"}
test-integration.cmd = "pytest {args:tests/} -m 'integration'"
test-integration.env = {PYTHONPATH = "src"}
test-all.cmd = "pytest tests/ -m 'not benchmark'"
test-all.env = {PYTHONPATH = "src"}
test-evals.cmd = "pytest {args:tests-evals/}"
test-evals.env = {PYTHONPATH = "src"}
lint-imports.cmd = "lint-imports"
lint-imports.env = {PYTHONPATH = "src"}
lint.cmd = "ruff check --fix src/ tests/ tests-evals/"
lint.env = {PYTHONPATH = "src"}
lint-check.cmd = "ruff check src/ tests/ tests-evals/"
lint-check.env = {PYTHONPATH = "src"}
format.cmd = "ruff format src/ tests/ tests-evals/"
format.env = {PYTHONPATH = "src"}
format-check.cmd = "ruff format --check src/ tests/ tests-evals/"
format-check.env = {PYTHONPATH = "src"}
typecheck.cmd = "pyright"
typecheck.env = {PYTHONPATH = "src"}
docs-check.cmd = "python scripts/check-markdown-links.py"

[dependency-groups]
dev = [
    "import-linter>=2.10",
    "ruff==0.14.14",
    "pyright>=1.1.408",
    "pre-commit>=4.5.1",
    "pytest-xdist>=3.8.0",
    "pytest-asyncio>=1.3.0",
]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]
"tests-evals/**" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.14"
pythonPlatform = "Linux"
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
include = ["src"]
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = false
ignore = []

[tool.importlinter]
root_packages = ["agent_foundry"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Third-party eval libraries confined to evals.runners"
type = "forbidden"
source_modules = ["agent_foundry"]
forbidden_modules = ["pydantic_evals"]
ignore_imports = [
    "agent_foundry.evals.runners.pydantic_evals -> pydantic_evals",
]
